--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "API REST para app de aprendizaje",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-
-  "keywords": ["api", "express", "postgresql", "cloudinary", "backend"],
+  "keywords": [
+    "api",
+    "express",
+    "postgresql",
+    "cloudinary",
+    "backend"
+  ],
   "author": "Luis Osorio",
   "license": "MIT",
-
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -23,15 +27,13 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.4",
     "pg": "^8.16.0"
   },
-
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
-  
   "engines": {
     "node": ">=18.x"
   }
 }
-
